# aoc22

./: .clang-format  CMakeLists.txt  README.md  day1.1.cpp
